--- a/ProjectList/ProjectList.css
+++ b/ProjectList/ProjectList.css
@@ -4,16 +4,30 @@
     text-decoration: none;
     
 }
-/* top baner thing */
+
+/* header */
+
 #TopHeader{
     background-color: black;
-    color: white;
-    padding-left: 15px;
-    text-align: center;
     height: 80px;
-
+    position: sticky;
+    top: 0px;
+    z-index: 1000;
+}
+#TopHeader a h1,h2{
+    color: white;
+}
+#TopHeader a:hover *{
+    color: rgb(180, 200, 255);
+    
 }
 
+/* Heading think */
+#Overview{
+    text-align: center;
+    background-color: rgb(195, 195, 195);
+    height: 80px;
+}
 
 /* navigation aria */
 * #TopicList ul li{
