--- a/NASA_SL/NASA_SL.css
+++ b/NASA_SL/NASA_SL.css
@@ -8,11 +8,13 @@
 /* header */
 
 #TopHeader{
+    position: sticky;
     background-color: black;
     height: 80px;
     
     top: 0px;
     z-index: 1000;
+    
 }
 #TopHeader a h1,h2{
     color: white;
@@ -24,10 +26,13 @@
 
 /* Nav bar */
 #navbar{
+    top: 80px;
+    z-index: 1000;
+    position: sticky;
     width: 100%;
     height: 15px;
     background-color: black;
-    position: relative;
+    /* position: relative; */
     transition: 0.3s;
 
 }
@@ -74,4 +79,58 @@
 
 
 }
+/* body */
 
+.outerbox{
+    justify-self: center;
+    text-align: center;
+
+
+ border-color: black;
+ border-style: groove;
+ border-radius: 50px;
+
+ width: 90%;
+ margin: 1%;
+
+ 
+}
+.outerbox header{
+    font-weight: bold;
+    font-size: x-large;
+    text-decoration: underline;
+}
+.sidebyside{
+justify-self: center;
+
+display: table;
+
+width: 96%;
+ 
+}
+.sidebysideobject{
+float: left;
+ width: 48%;
+ text-align: center;
+
+ 
+}
+.pdfText{
+    height: 500px;
+}
+.pdfSlide{
+    width: 800px;
+    height: 350px;
+}
+.logoimg{
+    float:right;
+    width: 5%;
+}
+
+.Title{
+    padding-top: 1%;
+    float: left;
+   font-weight: bold;
+    font-size: xx-large;
+    text-decoration:wavy; 
+}
