--- a/Neural_Network/NeuralNetwork.css
+++ b/Neural_Network/NeuralNetwork.css
@@ -8,11 +8,13 @@
 /* header */
 
 #TopHeader{
+    position: sticky;
     background-color: black;
     height: 80px;
     
     top: 0px;
     z-index: 1000;
+    
 }
 #TopHeader a h1,h2{
     color: white;
@@ -24,10 +26,13 @@
 
 /* Nav bar */
 #navbar{
+    top: 80px;
+    z-index: 1000;
+    position: sticky;
     width: 100%;
     height: 15px;
     background-color: black;
-    position: relative;
+    /* position: relative; */
     transition: 0.3s;
 
 }
@@ -76,7 +81,11 @@
 }
 
 /* bodey */
-
+section h1{
+    padding-left: 5%;
+    padding-top: 5%;
+    font-size: xx-large;
+}
 section  .outerbox{
     justify-self: center;
 
