--- a/index.css
+++ b/index.css
@@ -8,11 +8,13 @@
 /* header */
 
 #TopHeader{
+    position: sticky;
     background-color: black;
     height: 80px;
     
     top: 0px;
     z-index: 1000;
+    
 }
 #TopHeader a h1,h2{
     color: white;
@@ -24,10 +26,13 @@
 
 /* Nav bar */
 #navbar{
+    top: 80px;
+    z-index: 1000;
+    position: sticky;
     width: 100%;
     height: 15px;
     background-color: black;
-    position: relative;
+    /* position: relative; */
     transition: 0.3s;
 
 }
