i don't know nav fix?

--- a/index.css
+++ b/index.css
@@ -80,16 +80,7 @@
 
 }
 /* body */
-section{
-    border-radius: 50px;
- border-color: black;
- border-style: groove;
- display: table;
-    margin: 15px;
-    padding: 5px;
-    width: 90%;
-    justify-self: center;
-}
+
 section img{
 float: left;   
  width: 35%;
@@ -106,4 +97,41 @@ section #text1 h1{
 }
 section #text1 p{
     font-size: x-large;
+}
+
+/* second box */
+.outerbox{
+    border-radius: 50px;
+ border-color: black;
+ border-style: groove;
+ display: table;
+    margin: 15px;
+    padding: 5px;
+    width: 90%;
+    justify-self: center;
+
+ 
+}
+.sidebyside{
+justify-self: center;
+
+display: table;
+
+width: 96%;
+ 
+}
+.sidebysideobject{
+float: left;
+ width: 48%;
+ text-align: center;
+ padding: 1%;
+
+ 
+}
+.center{
+    text-align: center;
+}
+.centerList{
+    display: inline-block;
+    text-align: left;
 }
